src/objects/Couts_de_transport__mdt.object
<CustomObject>
    <description>Ce paramètre sert à stocker le coût de transport</description>
    <fields>
        <fullName>CoutDeTransport__c</fullName>
        <label>Coût de transport</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepartLivraison__c</fullName>
        <label>Départ Livraison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paris</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lyon</fullName>
                </value>
                <value>
                    <fullName>Marseille</fullName>
                </value>
                <value>
                    <fullName>Nantes</fullName>
                </value>
                <value>
                    <fullName>Lille</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationLivraison__c</fullName>
        <label>Destination  Livraison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paris</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lyon</fullName>
                </value>
                <value>
                    <fullName>Marseille</fullName>
                </value>
                <value>
                    <fullName>Nantes</fullName>
                </value>
                <value>
                    <fullName>Lille</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coût de transport</label>
    <pluralLabel>Coûts de transport</pluralLabel>
</CustomObject>